llenado de info

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <div class="pt-8">
       <div class="container px-3 xl:px-8 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center text-white md:text-left">
-          <p class="uppercase tracking-loose w-full">Descarga y Almacenamiento de CFDIs Simplificado</p>
-          <h1 class="my-4 text-5xl font-bold leading-tight">Si estás iniciando tu propio negocio ¡HAZTE SOCIO! de </h1>
-          <p class="leading-normal text-2xl mb-8">Y OBTÉN EXCELENTES GANANCIAS. <span class="text-yellow-500">Gratis por 15 días!</span></p>
+          <p class="uppercase tracking-loose w-full">FORMA PARTE DE NUESTROS SOCIOS</p>
+          <h1 class="my-4 text-5xl font-bold leading-tight">INICIA tu propio negocio con más de 2000 artículos para el hogar que tenemos para ti. </h1>
+          <p class="leading-normal text-2xl mb-8">Obtén excelentes ganancias. <!--<span class="text-yellow-500">Gratis por 15 días!</span>--></p>
 
         </div>
         <div class="w-full md:w-3/5 py-16 text-center">
@@ -98,22 +98,23 @@
 
     <section class="bg-white py-8">
       <div class="container max-w-6xl mx-auto m-8">
-        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Tu Plataforma!</h1>
+        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">¡Más de 10,000 socios haciendo negocio con nuestros productos!</h1>
         <div class="w-full mb-12">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
 
         <div class="flex flex-wrap items-center">
           <div class="sm:w-1/2 p-6">
-            <h2 class="text-4xl text-gray-800 font-bold leading-none mb-3">Descarga 100% automática</h2>
+            <h2 class="text-4xl text-gray-800 font-bold leading-none mb-3">Ganancias del 100%</h2>
             <p class="text-gray-700 mb-3 text-lg">
-              CFDI Analítica descarga tus facturas automáticamente casí en tiempo real
-              del o los contribuyentes dados de alta.</p>
-            <p class="text-gray-700 mb-8 text-lg">
+              Estamos enfocados en la búsqueda de los mejores productos al más bajo costo en el mercado, con
+el objetivo de que puedas tener un margen de ganancia superior al 100%, así apoyarte a crecer tu
+emprendimiento.</p>
+            <!--<p class="text-gray-700 mb-8 text-lg">
               Evita estar entrando a la página del SAT a descargar facturas de uno por uno.
               CFDI Analítica se encarga de la tarea para que tu puedas
               enfocarte en lo que realmente importa.
-            </p>
+            </p>-->
           </div>
           <div class="w-full sm:w-1/2 p-6">
             <div class="relative flex">
@@ -145,14 +146,14 @@
           <div class="w-full sm:w-1/2 p-6 mt-6">
             <div class="align-middle">
               <h2 class="text-4xl text-gray-800 font-bold leading-none mb-3">
-                Tus Facturas Listas
+                Membresía
               </h2>
               <p class="text-gray-700 text-lg mb-3">
-                ¿Qué necesitas <i>hoy?</i>
+                ¿Cómo puedes comprar en nuestra tienda?</i>
               </p>
               <p class="text-gray-700 text-lg mb-8">
-                Toda la información de tus facturas al alcance,
-                haz búsquedas, filtra, exporta, comprime y más.
+                Realiza una compra inicial con un monto superior a $1,500 para registrarte, mantente activo con
+consumos mensuales de $500.
               </p>
             </div>
           </div>
@@ -165,7 +166,7 @@
 
       <div class="container mx-auto px-2 pt-4 pb-12 text-gray-800">
 
-        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Precio</h1>
+        <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Membresía</h1>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
@@ -174,21 +175,17 @@
 
           <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-none lg:rounded-l-lg bg-white mt-4 shadow">
             <div class="flex-1 bg-white text-gray-700 rounded-t rounded-b-none overflow-hidden">
-              <div class="p-8 text-3xl font-bold text-center border-b-4">Starter</div>
+              <div class="p-8 text-3xl font-bold text-center border-b-4">Básica</div>
               <ul class="w-full text-center text-sm">
-                <li class="border-b py-4">Contribuyentes ilimitados</li>
-                <li class="border-b py-4">CFDIs hasta 1000</li>
-                <li class="border-b py-4">Descarga automática</li>
-                <li class="border-b py-4">Almacenamiento en la nube</li>
-                <li class="border-b py-4">Descarga de múltiple CFDIs en zip</li>
-                <li class="border-b py-4">Exportación a Excel/Hoja de cálculo</li>
-                <li class="border-b py-4">Exportación de CFDIs a PDF hasta 100</li>
+                <li class="border-b py-4">Precios con descuentos aplicados</li>
+                <li class="border-b py-4">Acceso a tienda VESI</li>
+                <li class="border-b py-4">Consumo mensual de $500</li>
               </ul>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden p-6">
-              <div class="w-full pt-6 text-3xl text-gray-700 font-bold text-center">$99.00 <span class="text-base">/ al mes</span></div>
+              <div class="w-full pt-6 text-3xl text-gray-700 font-bold text-center">$1,500 <span class="text-base">/ al mes</span></div>
               <div class="flex items-center justify-center">
-                <a href="/accounts/signup/" class="mx-auto lg:mx-0 hover:underline bg-blue-700 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Iniciar Prueba Gratis</a>
+                <a href="https://wa.me/6671740005?text=Me%20gustaría%20saber%20más" target="_blank" class="mx-auto lg:mx-0 hover:underline bg-blue-700 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Más información</a>
               </div>
             </div>
           </div>
@@ -201,20 +198,18 @@
               <div class="w-full pb-8 text-3xl font-bold text-center">Plus</div>
               <div class="h-1 w-full gradient my-0 py-0"></div>
               <ul class="w-full text-center text-base font-bold">
-                <li class="border-b py-4">Contribuyentes ilimitados</li>
-                <li class="border-b py-4">CFDIs hasta 3000</li>
-                <li class="border-b py-4">Descarga automática</li>
-                <li class="border-b py-4">Almacenamiento en la nube</li>
-                <li class="border-b py-4">Descarga de múltiple CFDIs en zip</li>
-                <li class="border-b py-4">Exportación a Excel/Hoja de cálculo</li>
-                <li class="border-b py-4">Exportación de CFDIs a PDF hasta 300</li>
+                <li class="border-b py-4">Precios con descuentos aplicados</li>
+                <li class="border-b py-4">Acceso a tienda VESI</li>
+                <li class="border-b py-4">Acceso a compras en cualquiera de nuestras tiendas PAVE MAYORISTA</li>
+                <li class="border-b py-4">Consumo mensual de $500</li>
+                <li class="border-b py-4">Acceso a registro de huella adicional después de 1 año de mantenerse activa.</li>
                 <!--<li class="border-b py-4">Ahorro 17% sobre precio mensual</li>-->
               </ul>
             </div>
             <div class="bg-blue-700 text-white flex-none mt-auto bg-white rounded-b sm:rounded-bl-none rounded-t-none overflow-hidden shadow p-6">
-              <div class="w-full pt-6 text-4xl font-bold text-center">$299.00 <span class="text-base">/ al mes</span></div>
+              <div class="w-full pt-6 text-4xl font-bold text-center">$3,000 <span class="text-base">/ al mes</span></div>
               <div class="flex items-center justify-center">
-                <a href="/accounts/signup/" class="mx-auto lg:mx-0 hover:underline bg-yellow-500 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Iniciar Prueba Gratis</a>
+                <a href="https://wa.me/6671740005?text=Me%20gustaría%20saber%20más" target="_blank" class="mx-auto lg:mx-0 hover:underline bg-yellow-500 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Más información</a>
               </div>
             </div>
           </div>
@@ -245,15 +240,15 @@
 
     <section class="container mx-auto text-center py-6">
 
-      <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">100% en la nube</h1>
+      <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">¡INICIA YA!</h1>
       <div class="w-full mb-4">
         <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
       </div>
 
-      <h2 class="mt-4 mb-8 text-3xl leading-tight text-yellow-500">Prueba la mejor aplicación de descarga y administración de CFDIs!</h2>
+      <h2 class="mt-4 mb-8 text-3xl leading-tight text-yellow-500">Aprovecha la oportunidad de ser dueño de tu propio negocio</h2>
 
       <div class="mt-6 mb-12">
-        <a href="/accounts/signup/" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Iniciar Mi Prueba Gratis</a>
+        <a href="https://wa.me/6671740005?text=Me%20gustaría%20saber%20más" target="_blank" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Contáctanos</a>
       </div>
 
     </section>
