--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="w-full max-w-6xl relative mx-auto px-6">
     <div class="py-2 flex flex-col sm:flex-row sm:items-center">
       <a href="/" class="block py-1 flex items-center justify-center">
-        <img class="h-10 w-10 mr-2" src="./static/logo.svg" alt="CFDI Analítica">
+        <img class="h-10 w-10 mr-2" src="./static/logo.svg" alt="VESI HOGAR">
         <h1 class="text-lg uppercase tracking-wider font-extralight">VESI HOGAR</h1>
       </a>
       <div class="grow"></div>
@@ -259,7 +259,7 @@ consumos mensuales de $500.
 
   <footer class="container mx-auto  p-4 text-center text-sm text-gray-600 print:hidden">
     <span class="mx-1">
-      <a href="/" class="hover:text-gray-900">&copy; 2023 CFDI Analítica</a>
+      <a href="/" class="hover:text-gray-900">&copy; 2023 VESI HOGAR</a>
     </span>
     <a href="#" class="mx-1 hover:text-gray-900">Acerca de</a>
     <a href="#" class="mx-1 hover:text-gray-900">Términos</a>
