--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   <meta property="og:site_name" content="CFDI Analítica">
   <meta property="og:image:alt" content="CFDI Analítica logo and tagline">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./static/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon.png">
   <link href="./static/site.css" rel="stylesheet">
   
   <title>VESI HOGAR. &ndash; VESI HOGAR</title>
