cambio colores gradient a magenta y letras blancas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main class="grow">
     <style>
       .gradient {
-        background: linear-gradient(120deg, #2b6cb0, #3182ce, #319795, #ecc94b 90%);
+        background: linear-gradient(120deg, #ad2183, #d141a6, #da49ae, #f158c4 90%);
       }
     </style>
   <div class="gradient">
