--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 
   <main class="grow">
     <style>
-      .gradient {
+      .magenta-gradient {
         background: linear-gradient(120deg, #ad2183, #d141a6, #da49ae, #f158c4 90%);
       }
+
+      .gradient{
+        background: linear-gradient(120deg, #2b6cb0, #3182ce, #319795, #ecc94b 90%);
+      }
+
     </style>
-  <div class="gradient">
+  <div class="magenta-gradient">
 
     <div class="pt-8">
       <div class="container px-3 xl:px-8 mx-auto flex flex-wrap flex-col md:flex-row items-center">
