cambio colores de amarillo a magenta

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         </div>
         <div class="w-full sm:w-1/2 p-6">
           <div class="relative flex">
-            <div class="absolute inset-0 bg-yellow-500 rounded-lg rotate-3 origin-bottom-right"></div>
+            <div class="absolute inset-0 magenta-gradient rounded-lg rotate-3 origin-bottom-right"></div>
             <div class="rounded-lg shadow z-10">
               <div class="bg-white rounded-lg p-3 md:p-6 shadow-lg">
                 <div class="rounded-md overflow-hidden">
@@ -344,7 +344,7 @@
       <div class="flex flex-wrap flex-col-reverse items-center sm:flex-row">
         <div class="w-full sm:w-1/2 p-6 mt-6">
           <div class="relative flex">
-            <div class="absolute inset-0 bg-yellow-500 rounded-lg -rotate-3 origin-bottom-left"></div>
+            <div class="absolute inset-0 magenta-gradient rounded-lg -rotate-3 origin-bottom-left"></div>
             <div class="rounded-lg shadow z-10">
               <div class="bg-white rounded-lg p-3 md:p-6 shadow-lg">
                 <div class="rounded-md overflow-hidden">
@@ -396,7 +396,7 @@
                   mes</span></div>
               <div class="flex items-center justify-center">
                 <a href="https://wa.me/6671740005?text=Me%20gustaría%20saber%20más" target="_blank"
-                  class="mx-auto lg:mx-0 hover:underline bg-blue-700 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Más
+                  class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold  rounded-full my-6 py-4 px-8 shadow-lg">Más
                   información</a>
               </div>
             </div>
@@ -405,7 +405,7 @@
           <div class="flex flex-col w-5/6 lg:w-1/3 mx-auto lg:mx-0 rounded-lg bg-white mt-4 sm:-mt-6 shadow-lg z-10">
             <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
               <div class="w-full mt-4 pb-2 text-center">
-                <span class="bg-yellow-500 text-white text-sm p-1 px-2 rounded-lg">Mejor Valor</a>
+                <span class="magenta-gradient text-white text-sm p-1 px-2 rounded-lg">Mejor Valor</a>
               </div>
               <div class="w-full pb-8 text-3xl font-bold text-center">Plus</div>
               <div class="h-1 w-full gradient my-0 py-0"></div>
@@ -425,7 +425,7 @@
               </div>
               <div class="flex items-center justify-center">
                 <a href="https://wa.me/6671740005?text=Me%20gustaría%20saber%20más" target="_blank"
-                  class="mx-auto lg:mx-0 hover:underline bg-yellow-500 text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Más
+                  class="mx-auto lg:mx-0 hover:underline magenta-gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg">Más
                   información</a>
               </div>
             </div>
