text white del fondo

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
           <div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
 
-        <h2 class="mt-4 mb-8 text-3xl leading-tight text-yellow-500">Aprovecha la oportunidad de ser dueño de tu propio
+        <h2 class="mt-4 mb-8 text-3xl leading-tight text-white">Aprovecha la oportunidad de ser dueño de tu propio
           negocio</h2>
 
         <div class="mt-6 mb-12">
